[build-system]
requires = ["flit-scm", "wheel"]
build-backend = "flit_scm:buildapi"

[project]
name = "flit-sass"
authors = [
  { name = "Johannes Maron", email = "johannes@maron.family" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["flit", "pep518", "build", "packaging", "sass"]
dynamic = ["version", "description"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Environment :: Web Environment",
  "License :: OSI Approved :: BSD License",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
  "flit-core~=3.5",
  "libsass~=0.21",
  "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "flit-scm",
  "libsass",
  "build",
  "wheel",
]
scm = [
  "flit-scm",
]

[project.urls]
Project-URL = "https://github.com/codingjoe/flit-sass"
Changelog = "https://github.com/codingjoe/flit-sass/releases"

[tool.flit.module]
name = "flit_sass"

[tool.setuptools_scm]
write_to = "flit_sass/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --tb=short -rxs"
testpaths = ["tests"]

[tool.coverage.run]
source = ["flit_sass"]
omit = ["flit_sass/_version.py"]

[tool.coverage.report]
show_missing = true

[tool.isort]
atomic = true
line_length = 88
known_first_party = "flit_sass, tests"
include_trailing_comma = true
default_section = "THIRDPARTY"
combine_as_imports = true

[tool.pydocstyle]
add_ignore = "D1"
